# velo-rift

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile.base  Dockerfile.ci  README.md  busybox.manifest  config.toml.example  demo_self_bootstrap.sh  deny.toml  local-ci.sh  pyproject.toml  rust-toolchain.toml  setup-dev.sh  size_check.rs  test.sh  test_shim  test_shim.c  universal-velovfs-vision.md  verify_perms.sh
.githooks/: pre-commit
.github/workflows/: benchmark.yml  ci.yml
.ruff_cache/: .gitignore  CACHEDIR.TAG
.ruff_cache/0.14.14/: 1901096901795731487  5981528431551544050
crates/velo-cas/: Cargo.toml
crates/velo-cli/: Cargo.toml
crates/velo-cli/src/: daemon.rs  gc.rs  main.rs  mount.rs
crates/velo-cli/tests/: concurrent_test.rs  stress_test.rs
crates/velo-daemon/: Cargo.toml
crates/velo-fuse/: Cargo.toml
crates/velo-fuse/src/: lib.rs
crates/velo-ipc/: Cargo.toml
crates/velo-manifest/: Cargo.toml
crates/velo-manifest/src/: lib.rs  tier.rs
crates/velo-runtime/: Cargo.toml
crates/velo-runtime/src/: lib.rs
crates/velo-shim/: Cargo.toml
crates/velo-shim/src/: lib.rs
crates/vrift-cas/: BENCHMARK.md  Cargo.toml
crates/vrift-cli/: Cargo.toml
crates/vrift-config/: Cargo.toml
crates/vrift-daemon/: Cargo.toml
crates/vrift-inception-layer/: Cargo.toml
crates/vrift-ipc/: Cargo.toml
crates/vrift-ipc/src/: lib.rs
crates/vrift-manifest/: Cargo.toml
crates/vrift-shim/: Cargo.toml  build.rs
crates/vrift-shim/examples/: writer.rs
crates/vrift-shim/src/: interpose.rs  ipc.rs  lib.rs  macros.rs  path.rs  reals.rs  state.rs  sync.rs
crates/vrift-shim/src/c/: variadic_shim.c
crates/vrift-shim/src/sync/: fd_table.rs  mod.rs  ring_buffer.rs
crates/vrift-shim/src/syscalls/: close.rs  dir.rs  io.rs  linux_raw.rs  macos_raw.rs  mem.rs  misc.rs  mmap.rs  mod.rs  open.rs  path.rs  process.rs  stat.rs  vfs_ops.rs
crates/vrift-vdird/: Cargo.toml
docs/: ARCHITECTURE.md  BENCHMARK.md  BRANDING_AND_HIERARCHY.md  BUG-007-BOOTSTRAP-DEADLOCK.md  COMPATIBILITY.md  DEV-TICKET-RFC-0039.md  QA_AUDIT_REPORT_PHASE7.md  QA_REGRESSION_REPORT.md  RFC-0039-Transparent-Virtual-Projection.md  RFC-0040-Streaming-Ingest-Pipeline.md  STREAMING-PIPELINE-DESIGN.md  TESTING_BEST_PRACTICES.md  USAGE.md  VFS-SETUP-GUIDE.md  velo-world-model-whitepaper.md
docs/architecture/: velo-technical-deep-dive.md  velo-technical-positioning.md
docs/qa/: BUILD-ACCELERATION-SCENARIOS.md  RFC-0043-QA-DAEMON-SECURITY.md  RFC-0043-QA-FUNCTIONAL-ALIGNMENT.md  RFC-0043-QA-USER-PERSPECTIVE.md
docs/rfcs/: 0043-velo-vfs-cas-layer.md  RFC-0039-Transparent-Virtual-Projection.md  RFC-0040-macos-eperm-remediation.md  RFC-0041-CAS-GC-Multi-Project.md  RFC-0042-Sensitive-File-Exclusion.md  RFC-0043-Daemon-Architecture.md  RFC-0045-PERF-PROFILE.md  RFC-0046-Deterministic-Metadata-Isolation.md  RFC-0047-Syscall-Audit.md  RFC-0047-VFS-Mutation-Semantics.md  RFC-0048-Compiler-Syscall-Gap.md  RFC-0048-Transparent-Binary-Shadowing.md  RFC-0050-Live-Mode-Memory-Acceleration.md  RFC-0051-Acceleration-Strategy.md  RFC-0052-L2-Artifact-Cache.md  RFC-0053-macOS-Shell-Interception-FUSE.md  RFC-0054-vrift-Architecture.md
examples/: config.toml  velo-rift-node_modules_package.json
examples/benchmarks/: large_package.json  medium_package.json  monorepo_package.json  small_package.json  xlarge_package.json
scripts/: bench_inception.sh  benchmark_node_modules.sh  benchmark_parallel.sh  benchmark_suite.py  ci-common.sh  demo.sh  demo_dedup.sh  demo_gc.sh  demo_phantom.sh  e2e_test.py  gc_e2e_test.py  manual_test_shim.sh  mnemo-sentinel.sh  pre-push-check.sh  qa_full_suite.sh  run_all_tests.sh  setup_busybox.sh  test-suites.conf  test_abi_hazard.sh  test_cow.sh  test_cow_behavior.sh  test_gc.sh  test_inception_basic.sh  test_logging_v2.sh  test_resilience.sh  test_shim_basic.sh  test_vdir_robustness.sh  test_vfs_behavior.sh  v-ci  v-integration.sh  verify_reingest.py  verify_stat.py  vlog.py
test_logging_work/: full_log.txt  simple_open
test_resilience_work/: logs_cb.txt  logs_debug.txt  simple_open
tests/: run_comprehensive_suite.sh  run_emergent_isolation.sh  test_isolation.sh
tests/e2e/: run_sprint1_validation.sh  test_cargo_incremental.sh  test_concurrent_writers.sh  test_inception_e2e.sh  test_rustc_single_file.sh
tests/helpers/: compile_test_binaries.sh  test_common.sh
tests/integration/: test_bug_enoent_crash.sh  test_bug_vrift_not_ignored.sh  test_complete_startup.sh  test_live_ingest_e2e.sh
tests/lib/: test_stat.c  vrift_env.sh
tests/poc/: Cargo.toml  bench_ringbuffer.rs  bench_ringbuffer_standalone.sh  benchmark_stat_simple.sh  benchmark_syscall.sh  benchmark_vfs_vs_fs.sh  bug_symlink_resolve.sh  diag_empty.dylib  diag_empty.rs  diag_test  diag_test.c  repro_inception_init_race.sh  repro_manifest_key_mismatch.sh  repro_shim_init_race.sh  run_gap_suite.sh  test_access_permission.sh  test_at_syscall_family.sh  test_cargo_crash_analysis.sh  test_cargo_shim_stability.sh  test_compiler_syscall_coverage.sh  test_concurrent_init.sh  test_concurrent_stress.sh  test_concurrent_write.sh  test_deep_path_nesting.sh  test_directory_mtime.sh  test_dlopen_interception.sh  test_fchmod_gap.c  (+118 more)
tools/: vrift
(+127 files in other folders)
