[project]
name = "velo-rift-qa"
version = "0.1.0"
description = "Velo Rift QA tooling"
requires-python = "~=3.11.0"
license = "Apache-2.0"
readme = "README.md"
dependencies = [
    "requests",
    "psutil",
]

[tool.uv]
python-preference = "only-managed"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = false
ignore_missing_imports = true
exclude = 'benchmarks/|examples/|scripts/|bench\.py|benchmark_.*\.py'
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
# Allow untyped defs in scripts for now to ease transition
module = "scripts.*"
disallow_untyped_defs = false

# Ruff: Fast Python linter (replaces flake8/isort/pyupgrade)
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # bugbear
    "C4",     # comprehensions
    "UP",     # pyupgrade
    "PERF",   # performance anti-patterns
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function calls in defaults (FastAPI pattern)
    "PERF401",  # loop to comprehension - optional
]

[tool.ruff.lint.isort]
known-first-party = ["vrift_qa"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.0.0",
    "pytest>=9.0.2",
    "pytest-json-report>=1.5.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.9.0",
    "types-psutil>=5.9.5.20240316",
    "types-requests>=2.31.0.20240406",
]
