[package]
name = "velo-fuse"
description = "FUSE filesystem daemon for Velo Rift"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# fuser = { version = "0.14", optional = true }
libc = "0.2"
velo-cas.workspace = true
velo-manifest.workspace = true
log = "0.4"
env_logger = "0.11"
anyhow.workspace = true

[features]
default = []
fuse = []

[dev-dependencies]
tempfile = "3.14"
