[package]
name = "velo-manifest"
description = "Manifest data structure for Velo Rift virtual filesystem"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true
velo-cas.workspace = true

[dev-dependencies]
tempfile = "3.14"
