[package]
name = "velo-runtime"
description = "Runtime isolation and orchestration for Velo Rift"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
nix = { version = "0.27", features = ["mount", "sched", "fs"] }
velo-cas.workspace = true
velo-manifest.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3.14"
