[package]
name = "velo-shim"
description = "LD_PRELOAD shim for Velo Rift virtual filesystem"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "velo_shim"
crate-type = ["cdylib"]  # Shared library for LD_PRELOAD

[dependencies]
libc = "0.2"
velo-cas.workspace = true
velo-manifest.workspace = true
memmap2.workspace = true
thiserror.workspace = true

[build-dependencies]
cc = "1.0"
