[package]
name = "vrift-ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util"] }
vrift-manifest = { path = "../vrift-manifest" }
