[package]
name = "vrift-shim"
description = "LD_PRELOAD shim for Velo Rift virtual filesystem"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "velo_shim"
crate-type = ["cdylib"]  # Shared library for LD_PRELOAD
test = false  # cdylib shim causes hangs when tested (INIT constructor)
doctest = false  # Also disable doctests to prevent any test harness loading

[dependencies]
libc = "0.2"
nix = { workspace = true, features = ["mman"] }
vrift-cas.workspace = true
vrift-manifest.workspace = true
memmap2.workspace = true
thiserror.workspace = true
anyhow = "1.0"
bincode = "1.3"
vrift-ipc = { path = "../vrift-ipc" }

[build-dependencies]
cc = "1.0"
